--- a/News_classification.ipynb
+++ b/News_classification.ipynb
@@ -217,11 +217,10 @@
     }
    ],
    "source": [
-    "texts = df['text'].values #Извлекаем данные всех текстов из столбца text\n",
+    "texts = df['text'].values\n",
     "classes = list(df['topics'].values) #Извлекаем соответствующие им значения классов (лейблов) \n",
-    "maxWordsCount = 60000 #Зададим максимальное количество слов/индексов, учитываемое при обучении текстов\n",
-    "\n",
-    "print(df['topics'].unique()) #Выводим все уникальные значения классов\n",
+    "maxWordsCount = 60000 #\n",
+    "print(df['topics'].unique()) #\n",
     "nClasses = df['topics'].nunique()+1  #Задаём количество классов, обращаясь к столбцу category и оставляя уникальные значения\n",
     "print(nClasses) #Посмотрим на количество классов"
    ]
@@ -241,12 +240,12 @@
     }
    ],
    "source": [
-    "#Преобразовываем текстовые данные в числовые/векторные для обучения нейросетью\n",
+    "#П\n",
     "tokenizer = Tokenizer(num_words=maxWordsCount, filters='!\"#$%&()*+,-./:;<=>?@[\\\\]^_`{|}~\\t\\n', lower=True, split=' ', oov_token='unknown', char_level=False)\n",
     "\n",
     "tokenizer.fit_on_texts(texts) \n",
     "\n",
-    "#Формируем матрицу индексов по принципу Bag of Words\n",
+    "#\n",
     "xAll = tokenizer.texts_to_matrix(texts) \n",
     "print(xAll.shape)  \n",
     "print(xAll[0, :20])"
@@ -299,10 +298,10 @@
     }
    ],
    "source": [
-    "#Преобразовываем категории в векторы\n",
+    "\n",
     "encoder = LabelEncoder() \n",
     "encoder.fit(classes) \n",
-    "classesEncoded = encoder.transform(classes) # Кодируем категории\n",
+    "classesEncoded = encoder.transform(classes) # К\n",
     "print(encoder.classes_)\n",
     "print(classesEncoded.shape)\n",
     "print(classesEncoded[:11])"
@@ -343,10 +342,10 @@
     }
    ],
    "source": [
-    "# разбиваем все данные на обучающую и тестовую выборки с помощью метода train_test_split из библиотеки sklearn\n",
+    "#\n",
     "xTrain, xVal, yTrain, yVal = train_test_split(xAll, yAll, test_size=0.3, shuffle = True)\n",
-    "print(xTrain.shape) #посмотрим на форму текстов из обучающей выборки\n",
-    "print(yTrain.shape) #и на форму соответсвующих им классов"
+    "print(xTrain.shape)\n",
+    "print(yTrain.shape)"
    ]
   },
   {
@@ -372,11 +371,11 @@
     }
    ],
    "source": [
-    "# для Эмбэддинга представляем текст в виде последовательности индексов слов, каждый из которых затем преобразуем в многомерный вектор\n",
+    "#\n",
     "Sequences = tokenizer.texts_to_sequences(texts) \n",
     "npSequences = np.array(Sequences)                \n",
     "xTrainE, xValE, yTrainE, yValE = train_test_split(npSequences, yAll, test_size=0.3)#сформируем новую форму выборки\n",
-    "print(xTrainE.shape) #посмотрим на форму текстов из обучающей выборки\n",
+    "print(xTrainE.shape) #\n",
     "print(yTrainE.shape)  "
    ]
   },
